# politecnico-ci

./: .travis.yml  Jenkinsfile  README.md  database.sql  docker-compose.yml  init_db.sh
.cloudbees/workflows/: my-automation.yaml
api/: .env  Cargo.toml  Dockerfile
api/src/: main.rs
app/: .travis.yml
